ui: removed dark mode toggle and fixed home and no tokens found page positioning by using dynamic height calculation and add toast

--- a/components/ui/navbar/navbar.css
+++ b/components/ui/navbar/navbar.css
@@ -14,8 +14,12 @@
     font-size: 17px;
     font-weight: 150;
     letter-spacing: 3px;
-    background: linear-gradient(135deg, #21e47f 0%, #68c4f6 100%);
+    background: linear-gradient(135deg, #21e47f 0%, #00FFFF 100%);
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
     background-clip: text;
+}
+
+.tabs:hover {
+    text-shadow: 1px 1px 2px #00FFFF;
 }
